Kubernetes/02-distributed/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: lemoncodersbc/lc-todo-api:v5-2024
        ports:
        - containerPort: 3000
