Kubernetes/02-distributed/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
